ui/gfx/image/canvas_image_source.cc
@@ -5,9 +5,12 @@
 #include "ui/gfx/image/canvas_image_source.h"
 
 #include "base/logging.h"
+#include "cc/paint/display_item_list.h"
+#include "cc/paint/record_paint_canvas.h"
 #include "ui/gfx/canvas.h"
 #include "ui/gfx/geometry/insets.h"
 #include "ui/gfx/image/image_skia.h"
+#include "ui/gfx/switches.h"
 
 namespace gfx {
 
@@ -49,7 +52,26 @@ CanvasImageSource::CanvasImageSource(const Size& size, bool is_opaque)
     : size_(size), is_opaque_(is_opaque) {}
 
 ImageSkiaRep CanvasImageSource::GetImageForScale(float scale) {
-  Canvas canvas(size_, scale, is_opaque_);
+  if (base::FeatureList::IsEnabled(features::kUsePaintRecordForImageSkia)) {
+    scoped_refptr<cc::DisplayItemList> display_item_list =
+        base::MakeRefCounted<cc::DisplayItemList>(
+            cc::DisplayItemList::kToBeReleasedAsPaintOpBuffer);
+    display_item_list->StartPaint();
+
+    cc::RecordPaintCanvas record_canvas(
+        display_item_list.get(),
+        SkRect::MakeIWH(size_.width(), size_.height()));
+    gfx::Canvas canvas(&record_canvas, scale);
+    canvas.Scale(scale, scale);
+    Draw(&canvas);
+
+    display_item_list->EndPaintOfPairedEnd();
+    display_item_list->Finalize();
+    return ImageSkiaRep(display_item_list->ReleaseAsRecord(),
+                        gfx::ScaleToCeiledSize(size_, scale), scale);
+  }
+
+  gfx::Canvas canvas(size_, scale, is_opaque_);
   Draw(&canvas);
   return ImageSkiaRep(canvas.GetBitmap(), scale);
 }
